--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/212806.th">เรือรบหลวงแดริ่ง (HMS Daring) กองทัพเรือแห่งสหราชอาณาจักรเยือนไทย</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192069.pt">Fórum atrai empresários interessados em parcerias em mega eventos</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/joint-ministerial-statement-on-international-anti-corruption-day--2">Joint Ministerial statement on International Anti-Corruption Day</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/192707.es-419">El Reino Unido presente en la Cumbre Aerospacial México 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/208807.es">Expositores británicos opinan sobre Smart Cities en Barcelona</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/angolan-chevening-scholars-reception-in-luanda--2">Reception for Angolan Chevening Scholars held in Luanda</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/293828.es-419">Call for Security and Justice Concept Bids</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/186178.es-419">Haciendo memoria en el olvido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/consular-notice-about-demonstrations-in-kuwait--3">Consular notice about demonstrations in Kuwait</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--6">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201030.it">Revisione Competenze UE: via alla terza fase della consultazione</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-are-now-open--2">Applications for 2014/15 Chevening Scholarships in Lebanon Open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/190265.ja">RADIEX 2013 に英国が出展</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--8">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/188434.lt">JK bus surengtas G8 šalių susitikimas demencijos klausimais</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/295391.es-419">La Embajada Británica celebra en junio el Mes Europeo del Clima en Buenos Aires</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/boat-racing-festival-british-embassy-vientiane-closure--2">Boat Racing Festival - British Embassy Vientiane Closure</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
