--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
-      <li><a href="https://www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest" class="govuk-link">Stop and search | Ethnicity facts and figures</a></li>
-      <li><a href="http://www.hinckleyandbosworthonline.org.uk" class="govuk-link">Hinckley and Bosworth Borough Council</a></li>
+      <li><a href="http://www.highpeak.gov.uk" class="govuk-link">High Peak Borough Council</a></li>
+      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
+      <li><a href="http://www.birmingham.gov.uk" class="govuk-link">Birmingham City Council</a></li>
+      <li><a href="http://www.preston.gov.uk" class="govuk-link">Preston City Council</a></li>
+      <li><a href="http://www.bournemouth.gov.uk" class="govuk-link">Bournemouth Borough Council</a></li>
+      <li><a href="http://www.oxfordshire.gov.uk/" class="govuk-link">Oxfordshire County Council</a></li>
+      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
       <li><a href="http://www.bolton.gov.uk" class="govuk-link">Bolton Metropolitan Borough Council</a></li>
-      <li><a href="http://www.suffolkcc.gov.uk" class="govuk-link">Suffolk County Council</a></li>
-      <li><a href="http://www.mendip.gov.uk" class="govuk-link">Mendip District Council</a></li>
       <li><a href="http://www.lambeth.gov.uk" class="govuk-link">London Borough of Lambeth Council</a></li>
-      <li><a href="http://www.cheltenham.gov.uk" class="govuk-link">Cheltenham Borough Council</a></li>
-      <li><a href="http://www.derbyshire.gov.uk" class="govuk-link">Derbyshire County Council</a></li>
-      <li><a href="http://www.stevenage.gov.uk" class="govuk-link">Stevenage Borough Council</a></li>
+      <li><a href="http://www.hinckleyandbosworthonline.org.uk" class="govuk-link">Hinckley and Bosworth Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
