--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.chichester.gov.uk">Chichester District Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
-<li><a href="https://www.gov.ukhttp//www.hinckleyandbosworthonline.org.uk">Hinckley and Bosworth Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bolton.gov.uk">Bolton Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.suffolkcc.gov.uk">Suffolk County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.mendip.gov.uk">Mendip District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.lambeth.gov.uk">London Borough of Lambeth Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cheltenham.gov.uk">Cheltenham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.derbyshire.gov.uk">Derbyshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/getajob/cvs/">Write your CV - National Careers Service</a></li>
+<li><a href="https://www.gov.ukhttps//www.moneyadviceservice.org.uk/en/categories/managing-debt">Debt management - Money Advice Service</a></li>
+<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/courses/">Courses and learning - National Careers Service</a></li>
 <li><a href="https://www.gov.ukhttp//www.stevenage.gov.uk">Stevenage Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.copelandbc.gov.uk/">Copeland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.swindon.gov.uk">Swindon Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.flintshire.gov.uk">Flintshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.rother.gov.uk">Rother District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.renfrewshire.gov.uk">Renfrewshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ballymena.gov.uk/">Ballymena Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
