--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -406,16 +406,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.banbridge.com/" class="govuk-link">Banbridge District Council</a></li>
-      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
-      <li><a href="http://www.highpeak.gov.uk" class="govuk-link">High Peak Borough Council</a></li>
-      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
-      <li><a href="http://www.cheltenham.gov.uk" class="govuk-link">Cheltenham Borough Council</a></li>
-      <li><a href="http://www.mendip.gov.uk" class="govuk-link">Mendip District Council</a></li>
-      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
-      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
-      <li><a href="http://www.coventry.gov.uk" class="govuk-link">Coventry City Council</a></li>
-      <li><a href="http://www.lewes-eastbourne.gov.uk" class="govuk-link">Eastbourne Borough Council</a></li>
+      <li><a href="https://nationalcareersservice.direct.gov.uk/advice/getajob/cvs/" class="govuk-link">Write your CV - National Careers Service</a></li>
+      <li><a href="https://www.moneyadviceservice.org.uk/en/categories/managing-debt" class="govuk-link">Debt management - Money Advice Service</a></li>
+      <li><a href="https://nationalcareersservice.direct.gov.uk/advice/courses/" class="govuk-link">Courses and learning - National Careers Service</a></li>
+      <li><a href="http://www.stevenage.gov.uk" class="govuk-link">Stevenage Borough Council</a></li>
+      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
+      <li><a href="http://www.swindon.gov.uk" class="govuk-link">Swindon Borough Council</a></li>
+      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
+      <li><a href="http://www.rother.gov.uk" class="govuk-link">Rother District Council</a></li>
+      <li><a href="http://www.renfrewshire.gov.uk" class="govuk-link">Renfrewshire Council</a></li>
+      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
