--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expats-dont-lose-your-vote-in-the-european-parliament-elections--2">British expats: Don’t lose your vote in the European Parliament elections</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-british-nationals-in-chennai--3">Important notice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/296968.zh-tw">英國簽證網路說明會</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-york-celebrates-british-culture-and-creativity-with-sir-ian-mckellen--6">New York celebrates British culture and creativity with Sir Ian McKellen</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/254304.es-419">Especialistas ingleses del College of Policing entrenan personal del ECU 911 - Ecuador</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/271974.es-419">Concluye exitosamente la Visita Real en Monterrey</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/297977.pt">HANGOUT #UKINBRAZIL</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269087.es-419">Servicio del Día del Recuerdo —Remembrance Sunday— de la Embajada Británica en la Ciudad de México</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210578.lt">JK ministrų pareiškimas dėl Tarptautinės antikorupcijos dienos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-provides-english-classes-to-costa-rican-police-officers--2">British Embassy provides English classes to Costa Rican Police Officers</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-islands-post-cabinet-statement--2">Turks and Caicos Islands Post Cabinet Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/174063.pt">VisitBritain anuncia parceria com Rock in Rio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/271980.es-419">Resumen de la Visita Real del Príncipe de Gales y la Duquesa de Cornwall a México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-uae-commit-to-a-closer-relationship-on-transport-cooperation--2">UK &amp; UAE commit to a closer relationship on transport cooperation</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/professor-charles-hendry-the-prime-minister-s-trade-envoy-to-kazakhstan-visits-kazakhstan">Professor Charles Hendry, the Prime Minister’s Trade Envoy to Kazakhstan, visits Kazakhstan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/225603.pt">Ampliando a cooperação entre Brasil e Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/287987.pt">Consulado promove recepção para empresas de Petróleo e Gás</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/209290.ru">Укрепление свободы вероисповедания в Республике Казахстан</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/disruption-to-emergency-contact-numbers-for-consular-assistance--3">Disruption to emergency contact numbers for consular assistance in Portugal</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
